feat(core): добавлено использование трансформаций